[gd_scene load_steps=10 format=3 uid="uid://5qjt2anysbas"]

[ext_resource type="Script" uid="uid://cvhn303xumsq4" path="res://scenes/trumpcard_ui/trumpcard_ui.gd" id="1_1o5f8"]
[ext_resource type="Theme" uid="uid://dn6c0j5ybbore" path="res://main_theme.tres" id="1_s6b5i"]
[ext_resource type="Script" uid="uid://bsjn3nr4vdhy3" path="res://scenes/trumpcard_ui/card_state_machine.gd" id="3_vyui8"]
[ext_resource type="Script" uid="uid://c20wf2h4wt6di" path="res://scenes/trumpcard_ui/trumpcard_states/card_base_state.gd" id="4_0v41r"]
[ext_resource type="Script" uid="uid://bpm2hxtxteo78" path="res://scenes/trumpcard_ui/trumpcard_states/card_clicked_state.gd" id="5_3q4go"]
[ext_resource type="Script" uid="uid://bbh28hg0edxxc" path="res://scenes/trumpcard_ui/trumpcard_states/card_dragging_state.gd" id="6_ad0kc"]
[ext_resource type="Script" uid="uid://c2tb8b7waw5fi" path="res://scenes/trumpcard_ui/trumpcard_states/card_released_state.gd" id="7_7me13"]
[ext_resource type="Script" uid="uid://d088tu8tqbeu7" path="res://scenes/trumpcard_ui/trumpcard_states/card_aiming_state.gd" id="8_ad0kc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6b5i"]
size = Vector2(96, 128)

[node name="TrumpCardUI" type="Control"]
custom_minimum_size = Vector2(96, 128)
layout_mode = 3
anchors_preset = 0
offset_right = 96.0
offset_bottom = 128.0
script = ExtResource("1_1o5f8")
metadata/_edit_lock_ = true

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.878431, 0.286275, 1)

[node name="State" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s6b5i")
text = "state"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(48, 64)
shape = SubResource("RectangleShape2D_s6b5i")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_vyui8")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_0v41r")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_3q4go")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_ad0kc")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_7me13")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_ad0kc")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
